# vital-tracker

vital-tracker/: .gitignore  Cargo.toml  docker-compose.yml
vital-tracker/scripts/: manage.ps1  run_vital_hidden.vbs  start_server.ps1  vital_hotkey.ahk
vital-tracker/src/: main.rs  paths.rs  server.rs
vital-tracker/src-tauri/: tauri.conf.json
vital-tracker/src-tauri/src/: main.rs
vital-tracker/src/db/: influx.rs
vital-tracker/static/: app.js  index.html  style.css
